# peeler_mouse

./: .gitignore  .gitmodules
firmware/: Cargo.toml  flake.nix
firmware/esp32/: Cargo.toml  build.rs  sdkconfig  sdkconfig.defaults
firmware/esp32/.cargo/: config.toml
firmware/esp32/components/: bindings.h
firmware/esp32/src/: blinky.rs  control.rs  main.rs  server.rs  wifi.rs
peeler_mouse_schematic/: library.kicad_sym  peeler_mouse_schematic.kicad_prl  peeler_mouse_schematic.kicad_pro  peeler_mouse_schematic.kicad_sch  peeler_mouse_schematic.kicad_sch-bak
resources/: resources.md
resources/esp32-idf-nix-setup/: Cargo.toml  README.md  flake.nix  rustfmt.toml
resources/esp32-idf-nix-setup/.cargo/: config.toml
resources/esp32-idf-nix-setup/src/: main.rs
resources/hello_world/: flake.nix  sdkconfig  sdkconfig.old
resources/nixpkgs-esp-dev-rust/: flake.nix
resources/nixpkgs-esp-dev-rust/shells/: esp32s2-idf-rust.nix  esp32s3-idf-rust.nix
resources/rainworld/: flake.nix
resources/test_rust/your-project/: Cargo.toml  flake.nix
